feat: tracking of node licence and "shared with mediacenters"